3.9.3/_sources/gallery/userdemo/index.rst.txt


.. _sphx_glr_gallery_userdemo:

.. _userdemo:

Userdemo
========



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Annotate Explain">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_annotate_explain_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_annotate_explain.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Annotate Explain</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Annotate Text Arrow">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_annotate_text_arrow_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_annotate_text_arrow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Annotate Text Arrow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="When creating an annotation using annotate, the arrow shape can be controlled via the connectionstyle parameter of arrowprops. For further details see the description of FancyArrowPatch.">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_connectionstyle_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_connectionstyle_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Connection styles for annotations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the implementation of a custom BoxStyle. Custom ConnectionStyle\s and ArrowStyle\s can be similarly defined.">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_custom_boxstyle01_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_custom_boxstyle01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Custom box styles</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the use of pyplot.subplot2grid to generate subplots.  Using GridSpec, as demonstrated in /gallery/userdemo/demo_gridspec03 is generally preferred.">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_demo_gridspec01_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_demo_gridspec01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">subplot2grid demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the use of GridSpec to generate subplots, the control of the relative sizes of subplots with width_ratios and height_ratios, and the control of the spacing around and between subplots using subplot params (left, right, bottom, top, wspace, and hspace).">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_demo_gridspec03_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_demo_gridspec03.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">GridSpec demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the use of nested GridSpec\s.">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_demo_gridspec06_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_demo_gridspec06.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Nested GridSpecs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PGF fonts">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_pgf_fonts_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_pgf_fonts.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PGF fonts</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PGF preamble">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_pgf_preamble_sgskip_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_pgf_preamble_sgskip.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PGF preamble</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PGF texsystem">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_pgf_texsystem_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_pgf_texsystem.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PGF texsystem</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple Annotate01">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_simple_annotate01_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_simple_annotate01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Annotate01</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple Legend01">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_simple_legend01_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_simple_legend01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Legend01</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple Legend02">

.. only:: html

  .. image:: /gallery/userdemo/images/thumb/sphx_glr_simple_legend02_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_userdemo_simple_legend02.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Legend02</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/userdemo/annotate_explain
   /gallery/userdemo/annotate_text_arrow
   /gallery/userdemo/connectionstyle_demo
   /gallery/userdemo/custom_boxstyle01
   /gallery/userdemo/demo_gridspec01
   /gallery/userdemo/demo_gridspec03
   /gallery/userdemo/demo_gridspec06
   /gallery/userdemo/pgf_fonts
   /gallery/userdemo/pgf_preamble_sgskip
   /gallery/userdemo/pgf_texsystem
   /gallery/userdemo/simple_annotate01
   /gallery/userdemo/simple_legend01
   /gallery/userdemo/simple_legend02

